--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_sign_in: ^6.2.1
+  sign_in_button: ^3.2.0
 
 dev_dependencies:
   flutter_test:
