--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_sign_in: ^6.2.1
   sign_in_button: ^3.2.0
+  firebase_core: ^2.31.0
+  firebase_auth: ^4.19.5
 
 dev_dependencies:
   flutter_test:
