--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   sign_in_button: ^3.2.0
   firebase_core: ^2.31.0
   firebase_auth: ^4.19.5
+  auto_size_text: ^3.0.0
+  easy_search_bar: ^2.5.0
 
 dev_dependencies:
   flutter_test:
