--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.19.5
   auto_size_text: ^3.0.0
   easy_search_bar: ^2.5.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
