--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   auto_size_text: ^3.0.0
   easy_search_bar: ^2.5.0
   dio: ^5.4.3+1
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
