--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   dio: ^5.4.3+1
   lottie: ^3.1.2
   intl: ^0.19.0
+  weather_icons: ^3.0.0
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
