--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   weather_icons: ^3.0.0
   geolocator: ^12.0.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
