--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   weather_icons: ^3.0.0
   geolocator: ^12.0.0
   shared_preferences: ^2.2.3
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+  connectivity_plus: ^6.0.3
+  go_router: ^14.1.4
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
