--- a/weather_app/android/app/src/main/AndroidManifest.xml
+++ b/weather_app/android/app/src/main/AndroidManifest.xml
@@ -44,4 +44,5 @@
     </queries>
     <!-- Either 'coarse' or 'fine' location permission is needed -->
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
