--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   connectivity_plus: ^6.0.3
   go_router: ^14.1.4
   transparent_image: ^2.0.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
