--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -18,6 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: images/logo.png
+  adaptive_icon_background: images/black.png
+  adaptive_icon_foreground: images/logo.png
+
+
 environment:
   sdk: '>=3.4.0 <4.0.0'
 
@@ -53,6 +62,7 @@ dependencies:
   go_router: ^14.1.4
   transparent_image: ^2.0.1
   provider: ^6.1.2
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -86,7 +96,7 @@ flutter:
    - images/cloudy.png
    - images/thunder.png
    
-
+ 
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -114,3 +124,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
